--- a/src/app/components/private/shared/messages/message-list/message-list.component.html
+++ b/src/app/components/private/shared/messages/message-list/message-list.component.html
@@ -24,11 +24,9 @@
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>First Name</th>
-
-                  <th>E-mail</th>
+                  <th>Sender</th>
                   <th>Subject</th>
-                  <th>Message</th>
+
                   <th>Edit</th>
 
                 </tr>
@@ -39,18 +37,19 @@
                   <td>{{ i + 1 }}</td>
                   <td>{{ message.sender }}</td>
 
-                  <td>{{ message.email }}</td>
+
                   <td>{{ message.title }}</td>
-                  <td>{{ message.content }}</td>
+
                   <td>
 
-                    <button
-                    class="btn btn-danger mx-2"
-                    style="color: white"
-                    (click)="delete(message._id, i)"
-                  >
-                    <i class="fa fa-trash" aria-hidden="true"></i>
-                  </button>
+                    <button class="btn btn-primary mx-2" style="color: white" [routerLink]="['/message',message._id]">
+                      <i class="fa fa-eye" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-danger mx-2" style="color: white" (click)="delete(message._id, i)">
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+
+                   
                 </tr>
 
               </tbody>
