--- a/src/app/components/private/shared/blog/single-article/single-article.component.html
+++ b/src/app/components/private/shared/blog/single-article/single-article.component.html
@@ -1,77 +1,56 @@
 <div class="sb-nav-fixed">
-    <app-top-bar></app-top-bar>
-  
-    <div id="layoutSidenav">
-      <app-side-bar></app-side-bar>
-  
-      <div id="layoutSidenav_content">
-        <main>
-          <div class="container-fluid px-4 ">
-            <h1 class="mt-4">Articles</h1>  
-            <form [formGroup]="myForm">
-              <div>
-                <img
-                  [src]="imageUrl"
-                  class="image-fluid article-image"
-                  alt=""
-                  style="width: 500px"
-                />
-              </div>
-              <div class="input-sec">
+  <app-top-bar></app-top-bar>
 
-                <div class="form-group">
-                  <div>
-                    <label for="articleName " class="mt-3">Le titre d'article :</label>
-                  </div>
-                  <input
-                    type="text"
-                    class="form-control article-input"
-                    formControlName="titre"
-                    id="articleName"
-                    readonly
-                  />
-                  <div *ngIf="titre?.invalid && titre?.touched">
-                    <small *ngIf="titre?.errors?.['required']" class="text-danger"
-                      ><b>titre est requis</b><br
-                    /></small>
-                    <small
-                      *ngIf="titre?.errors?.['minlength']"
-                      class="text-danger"
-                      ><b> titre incorrect</b><br
-                    /></small>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div>
-                    <label for="content " class="mt-3">le contenu de l'article :</label>
-                  </div>
-                  <textarea
-                    type="text"
-                    class="form-control article-input"
-                    formControlName="content"
-                    id="content"
-                    rows="10"
-                    readonly
-                  ></textarea>
-                  <div *ngIf="content?.invalid && content?.touched">
-                    <small
-                      *ngIf="content?.errors?.['required']"
-                      class="text-danger"
-                      ><b>Contenu est requis</b><br
-                    /></small>
-                    <small
-                      *ngIf="content?.errors?.['minlength']"
-                      class="text-danger"
-                      ><b> Contenu incorrect</b><br
-                    /></small>
-                  </div>
-                </div>
-              </div>
-            </form>
+  <div id="layoutSidenav">
+    <app-side-bar></app-side-bar>
+
+    <div id="layoutSidenav_content">
+      <main>
+        <div class="container-fluid px-4">
+          <h1 class="mt-4">Articles</h1>
+
+          <div>
+            <img
+              src="{{imageUrl}}{{article.image}}"
+              class="image-fluid article-image"
+              alt=""
+              style="width: 500px"
+            />
           </div>
-        </main>
-      </div>
+          <div class="input-sec">
+            <div class="form-group">
+              <div>
+                <label for="articleName " class="mt-3"
+                  >Le titre d'article :</label
+                >
+              </div>
+              <input
+                type="text"
+                class="form-control article-input"
+                value="{{article.titre}}"
+                id="articleName"
+                readonly
+              />
+            </div>
+            <div class="form-group">
+              <div>
+                <label for="content " class="mt-3"
+                  >le contenu de l'article :</label
+                >
+              </div>
+              <textarea
+                type="text"
+                class="form-control article-input"
+                value="{{article.content}}"
+                id="content"
+                rows="10"
+                readonly
+              ></textarea>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
-    <app-footer-dashboard></app-footer-dashboard>
   </div>
-  
+  <app-footer-dashboard></app-footer-dashboard>
+</div>
